--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-VUE_API_URL=http://localhost:8001/api
-export NODE_TLS_REJECT_UNAUTHORIZED=0 
+# VUE_APP_API_URL=https://b479-120-188-66-87.ngrok-free.app/api
+VUE_APP_API_URL=http://localhost:8000/api
+VUE_APP_NAME=SMILE App
+ 
