--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/ios": "^4.7.3",
     "axios": "^1.3.5",
     "core-js": "^3.8.3",
+    "secure-ls": "^1.2.6",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
